k8s/base/solidity-security-docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solidity-security-docs
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  - port: 3001
    targetPort: search
    protocol: TCP
    name: search
  selector:
    app.kubernetes.io/name: solidity-security-docs

---
apiVersion: v1
kind: Service
metadata:
  name: solidity-security-docs-search
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 9200
    targetPort: elasticsearch
    protocol: TCP
    name: elasticsearch
  selector:
    app.kubernetes.io/name: solidity-security-docs
